--- a/index.html
+++ b/index.html
@@ -33,5 +33,72 @@
         <p class="text--small">*O preço pode variar caso a assinatura seja feita através de outras plataformas</p>
       </div>
     </section>
+    <section class="shows">
+      <nav class="shows__tabs">
+        <buttons class="shows__tabs__button shows__tabs__button--is--active">Em breve</buttons>
+        <buttons class="shows__tabs__button">Mais populares</buttons>
+        <buttons class="shows__tabs__button">Mais no Star+</buttons>
+      </nav>
+      <ul class="shows__list shows__list--is--active">
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/willow.jpg" alt="Willow" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem na noite" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey Amigos espetacluares" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="The santa clauses" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem limites" />
+        </li>
+      </ul>
+      <ul class="shows__list">
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/willow.jpg" alt="Willow" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem na noite" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey Amigos espetacluares" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="The santa clauses" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem limites" />
+        </li>
+      </ul>
+      <ul class="shows__list">
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/desencantada.jpg" alt="Desencantada" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/willow.jpg" alt="Willow" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/lobisomem.jpg" alt="Lobisomem na noite" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey Amigos espetacluares" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="The santa clauses" />
+        </li>
+        <li class="shows__list__item">
+          <img src="./dist/images/em_breve/sem_limites.jpg" alt="Sem limites" />
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
