--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="dist/css/main.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" type="imagex/ico" href="./dist/images/favicon.ico" />
+    <title>Clone Disney+</title>
   </head>
   <body>
+    <header class="header header--is-hidden">
+      <div class="header__container">
+        <h1><img src="./dist/images/disneyplus.svg" alt="Disney+" class="header__logo" /></h1>
+        <ul class="header__links">
+          <li class="header__links__item"><a href="" class="button button--secondary">Assine agora</a></li>
+          <li class="header__links__item"><a href="" class="button button--dark">Entrar</a></li>
+        </ul>
+      </div>
+    </header>
     <section class="hero">
       <div class="hero__content">
-        <h1 class="hero__content_branding">
+        <div class="hero__content_branding">
           <img src="./src/images/disneyplus.svg" alt="Disney Plus" />
-        </h1>
+        </div>
         <h3 class="title--small">As melhores histórias em um só lugar</h3>
         <p>
           <a href="" class="link-text">Assinar o Disney+</a>
@@ -214,7 +224,7 @@
               <li class="faq__questions__item__answer__list__itens">Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+.</li>
               <li class="faq__questions__item__answer__list__itens">
                 Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o
-                <a href="https://help.disneyplus.com/pt-BR/contact-us?redirect=false">suporte do Disney+</a> para conhecer suas opções.
+                <a href="https://help.disneyplus.com/pt-BR/contact-us?redirect=false" target="_blank">suporte do Disney+</a> para conhecer suas opções.
               </li>
               <li class="faq__questions__item__answer__list__itens">Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</li>
               <li class="faq__questions__item__answer__list__itens">Lembre-se: você pode cancelar a assinatura quando quiser.</li>
@@ -243,7 +253,40 @@
         </li>
       </ul>
     </section>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__container">
+        <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+" />
+        <ul class="footer__links">
+          <li class="footer__links__item">
+            <div class="language-selector">
+              <img src="./dist/images/icones/globe.svg" alt="Globo do mundo" />
+              <select>
+                <option>Português</option>
+                <option>English</option>
+              </select>
+            </div>
+          </li>
+          <li class="footer__links__item"><a href="https://disneytermsofuse.com/brazilian-portuguese/" target="_blank" class="text--small">Termos e condições de uso</a></li>
+          <li class="footer__links__item"><a href="https://www.disneyplus.com/legal/política-de-privacidade" target="_blank" class="text--small">Política de privacidade</a></li>
+          <li class="footer__links__item">
+            <a href="https://www.disneyplus.com/legal/política-de-privacidade" target="_blank" class="text--small">Proteção de Dados no Brasil</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="https://preferences-mgr.trustarc.com/?pid=disney01&aid=disneyplus01&type=disneyplus" target="_blank" class="text--small">Anúncios personalizados</a>
+          </li>
+          <li class="footer__links__item">
+            <a href="https://help.disneyplus.com/pt-BR/article/disneyplus-devices-supported" target="_blank" class="text--small">Dispositivos compatíveis</a>
+          </li>
+          <li class="footer__links__item"><a href="https://help.disneyplus.com/pt-BR/" target="_blank" class="text--small">Ajuda</a></li>
+          <li class="footer__links__item"><a href="https://help.disneyplus.com/pt-BR/" target="_blank" class="text--small">Sobre o Disney+</a></li>
+        </ul>
+        <p class="text--small">® 2023 Disney, Disney+ e The Walt Disney Company. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="text--small">
+          Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda., World
+          Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP – CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004-20
+        </p>
+      </div>
+    </footer>
 
     <script src="./src/main.js"></script>
   </body>
